app/main/default/objects/agf__Headcount__c/fields/agf__Cloud__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>agf__Cloud__c</fullName>
        <description>Defines the Cloud headcount is associated with</description>
        <label>Cloud (Deprecated)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>Capacity</fullName>
                </value>
                <value>
                    <fullName>CCE/Site Reliability</fullName>
                </value>
                <value>
                    <fullName>Chatter</fullName>
                </value>
                <value>
                    <fullName>Data.com - San Francisco</fullName>
                </value>
                <value>
                    <fullName>Data.com - San Mateo</fullName>
                </value>
                <value>
                    <fullName>Database and Core</fullName>
                </value>
                <value>
                    <fullName>Data Center Automation</fullName>
                </value>
                <value>
                    <fullName>Industry</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Matrix</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Network and Systems Platform</fullName>
                </value>
                <value>
                    <fullName>Path-To-Production</fullName>
                </value>
                <value>
                    <fullName>Platform</fullName>
                </value>
                <value>
                    <fullName>Platform - Declarative</fullName>
                </value>
                <value>
                    <fullName>Platform - Programmatic</fullName>
                </value>
                <value>
                    <fullName>Platform Programmatic UI</fullName>
                </value>
                <value>
                    <fullName>Platform - Services</fullName>
                </value>
                <value>
                    <fullName>Productivity</fullName>
                </value>
                <value>
                    <fullName>R&amp;D App Delivery</fullName>
                </value>
                <value>
                    <fullName>Reliability</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Salesforce Cloud</fullName>
                </value>
                <value>
                    <fullName>Sayonara</fullName>
                </value>
                <value>
                    <fullName>Search</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Shared Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>