app/main/default/objects/agf__Headcount__c/fields/agf__Location__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>agf__Location__c</fullName>
        <label>Location_Deprecated</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>agf__Region__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Canada - Remote</fullName>
                </value>
                <value>
                    <fullName>Canada - Toronto</fullName>
                </value>
                <value>
                    <fullName>CA - San Francisco</fullName>
                </value>
                <value>
                    <fullName>CA - San Mateo</fullName>
                </value>
                <value>
                    <fullName>CA - Santa Monica</fullName>
                </value>
                <value>
                    <fullName>California - Remote</fullName>
                </value>
                <value>
                    <fullName>Colorado - Remote</fullName>
                </value>
                <value>
                    <fullName>FL - Tampa</fullName>
                </value>
                <value>
                    <fullName>Florida - Remote</fullName>
                </value>
                <value>
                    <fullName>Georgia - Remote</fullName>
                </value>
                <value>
                    <fullName>Idaho - Remote</fullName>
                </value>
                <value>
                    <fullName>Illinois - Remote</fullName>
                </value>
                <value>
                    <fullName>Louisiana - Remote</fullName>
                </value>
                <value>
                    <fullName>Maine - Remote</fullName>
                </value>
                <value>
                    <fullName>Massachusetts - Remote</fullName>
                </value>
                <value>
                    <fullName>New Hampshire - Remote</fullName>
                </value>
                <value>
                    <fullName>New Jersey - Remote</fullName>
                </value>
                <value>
                    <fullName>New York - Remote</fullName>
                </value>
                <value>
                    <fullName>North Carolina - Remote</fullName>
                </value>
                <value>
                    <fullName>NY - New York</fullName>
                </value>
                <value>
                    <fullName>Ohio - Remote</fullName>
                </value>
                <value>
                    <fullName>Oregon - Remote</fullName>
                </value>
                <value>
                    <fullName>Pennsylvania - Remote</fullName>
                </value>
                <value>
                    <fullName>Texas - Remote</fullName>
                </value>
                <value>
                    <fullName>VA - Reston</fullName>
                </value>
                <value>
                    <fullName>WA - Seattle</fullName>
                </value>
                <value>
                    <fullName>Washington - Remote</fullName>
                </value>
                <value>
                    <fullName>India - Hyderabad</fullName>
                </value>
                <value>
                    <fullName>France - Paris</fullName>
                </value>
                <value>
                    <fullName>Sweden - Stockholm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>